UI更新+登陆注册后自动刷新

--- a/src/config/style/theme.css
+++ b/src/config/style/theme.css
@@ -1,40 +1,40 @@
 :root {
-  --background: oklch(0.9842 0.0034 247.8575);
-  --foreground: oklch(0.2795 0.0368 260.031);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.2795 0.0368 260.031);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.2795 0.0368 260.031);
-  --primary: oklch(0.55 0.21 277);
-  --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.9276 0.0058 264.5313);
-  --secondary-foreground: oklch(0.3729 0.0306 259.7328);
-  --muted: oklch(0.967 0.0029 264.5419);
-  --muted-foreground: oklch(0.551 0.0234 264.3637);
-  --accent: oklch(0.9299 0.0334 272.7879);
-  --accent-foreground: oklch(0.3729 0.0306 259.7328);
-  --destructive: oklch(0.6368 0.2078 25.3313);
-  --destructive-foreground: oklch(1 0 0);
-  --border: oklch(0.8717 0.0093 258.3382);
-  --input: oklch(0.8717 0.0093 258.3382);
-  --ring: oklch(0.5854 0.2041 277.1173);
-  --chart-1: oklch(0.5854 0.2041 277.1173);
-  --chart-2: oklch(0.5106 0.2301 276.9656);
-  --chart-3: oklch(0.4568 0.2146 277.0229);
-  --chart-4: oklch(0.3984 0.1773 277.3662);
-  --chart-5: oklch(0.3588 0.1354 278.6973);
-  --sidebar: oklch(0.967 0.0029 264.5419);
-  --sidebar-foreground: oklch(0.2795 0.0368 260.031);
-  --sidebar-primary: oklch(0.5854 0.2041 277.1173);
-  --sidebar-primary-foreground: oklch(1 0 0);
-  --sidebar-accent: oklch(0.9299 0.0334 272.7879);
-  --sidebar-accent-foreground: oklch(0.3729 0.0306 259.7328);
-  --sidebar-border: oklch(0.8717 0.0093 258.3382);
-  --sidebar-ring: oklch(0.5854 0.2041 277.1173);
+  --background: #FDF9F3;
+  --foreground: #333333;
+  --card: #FFFFFF;
+  --card-foreground: #333333;
+  --popover: #FFFFFF;
+  --popover-foreground: #333333;
+  --primary: #EE8480;
+  --primary-foreground: #FFFFFF;
+  --secondary: #88CCB9;
+  --secondary-foreground: #FFFFFF;
+  --muted: #FEF8F4;
+  --muted-foreground: #888888;
+  --accent: #F9E58A;
+  --accent-foreground: #333333;
+  --destructive: #EF4444;
+  --destructive-foreground: #FFFFFF;
+  --border: #FADCDA;
+  --input: #FADCDA;
+  --ring: #FADCDA;
+  --chart-1: #EE8480;
+  --chart-2: #88CCB9;
+  --chart-3: #F9E58A;
+  --chart-4: #FADCDA;
+  --chart-5: #333333;
+  --sidebar: #FDF9F3;
+  --sidebar-foreground: #333333;
+  --sidebar-primary: #EE8480;
+  --sidebar-primary-foreground: #FFFFFF;
+  --sidebar-accent: #FEF8F4;
+  --sidebar-accent-foreground: #333333;
+  --sidebar-border: #FADCDA;
+  --sidebar-ring: #EE8480;
   --font-sans: Noto Sans Mono, ui-sans-serif, sans-serif, system-ui;
   --font-serif: Merriweather, serif;
   --font-mono: JetBrains Mono, monospace;
-  --radius: 0.5rem;
+  --radius: 1.5rem;
   --shadow-x: 0px;
   --shadow-y: 4px;
   --shadow-blur: 8px;
